fix(cases): prevent text truncation on case study detail on mobile

--- a/website/modules/asset/ui/src/scss/_cases.scss
+++ b/website/modules/asset/ui/src/scss/_cases.scss
@@ -929,9 +929,12 @@
       display: flex;
       flex-direction: column;
       height: auto;
+      margin: 110px 0 0;
+      max-width: 100%;
+      min-width: 0;
+      overflow-wrap: break-word;
       width: auto;
       z-index: 1;
-      margin: 110px 0 0;
 
       @include breakpoint-medium {
         background: $white;
@@ -946,10 +949,11 @@
         background: $white;
         display: flex;
         flex-direction: column;
-        padding: 24px;
         height: 394px;
         margin: 0 20px;
         max-width: none;
+        min-width: 0;
+        padding: 24px;
 
         @include breakpoint-medium {
           height: auto;
@@ -963,8 +967,9 @@
         }
 
         .truncate-wrapper {
-          flex: none;
           display: block;
+          flex: none;
+          min-width: 0;
           width: 100%;
 
           @include breakpoint-medium {
@@ -1083,18 +1088,20 @@
       }
 
       &-secondary {
-        display: flex;
-        flex-direction: column;
         border-left: none;
         border-top: 1px solid $whisper;
-        max-width: 565px;
-        width: 100%;
-        padding: 16px 0;
         color: $gray-500;
+        display: flex;
+        flex-direction: column;
         font-style: $font-style-normal;
         font-weight: $font-weight-medium;
         margin: 48px auto 0;
+        max-width: 565px;
+        min-width: 0;
+        overflow-wrap: break-word;
         overflow-y: inherit;
+        padding: 16px 0;
+        width: 100%;
 
         @include breakpoint-medium {
           border-left: 1px solid $whisper;
@@ -1567,3 +1574,4 @@
     max-height: 40px;
   }
 }
+
